
[tool.poetry]
name = "p3man"
version = "0.1.0"
description = "Password manager. Manage your passwords through encryption."
authors = ["curtis <curtis.hu688@gmail.com>"]

[tool.poetry.scripts]
p3man = 'p3man:cli'

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
cryptography = "^37.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
